--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="ru">
+<html lang="en">
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
@@ -67,8 +67,8 @@
       <div class="card">
         <h1 class="h1">See who’s in the cluster.</h1>
         <p class="p">
-          Мини-панель для студентов 42: авторизация через intra,
-          затем отображение твоих данных и (дальше) статистики по кластерам.
+          A mini-dashboard for 42 students: authorize via intra,
+          then view your profile data and cluster statistics.
         </p>
 
         <div class="row">
@@ -83,7 +83,7 @@
         </div>
 
         <div class="footer">
-          Без паролей: вход происходит на стороне 42. Мы получаем только token через OAuth.
+          No passwords stored: login happens on 42's side. We only receive a token via OAuth.
         </div>
       </div>
 
