--- a/login.html
+++ b/login.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="ru">
+<html lang="en">
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
@@ -62,8 +62,8 @@
       <div class="card">
         <h1 class="h1">Login with 42</h1>
         <p class="p">
-          Нажми кнопку ниже — тебя перебросит на intra.42.fr.
-          Пароль вводится только на стороне 42.
+          Click the button below — you'll be redirected to intra.42.fr.
+          Password is entered only on 42's side.
         </p>
 
         <div class="row">
@@ -77,7 +77,7 @@
         </div>
 
         <div class="note">
-          Если ты уже логинился ранее на этом устройстве, можно просто открыть Dashboard.
+          If you've already logged in on this device, you can just open the Cluster Map.
         </div>
       </div>
 
