--- a/cluster.html
+++ b/cluster.html
@@ -421,6 +421,7 @@
     <div class="topbar">
       <div class="title">42 Cluster Lens (POC)</div>
       <div style="display:flex; gap:10px;">
+        <button class="btn" id="btn-home">Home</button>
         <button class="btn" id="btn-login">Login</button>
         <button class="btn" id="btn-logout">Logout</button>
       </div>
