fix: update home page redirect to root path

--- a/cluster.html
+++ b/cluster.html
@@ -712,7 +712,7 @@
 
     // === CONFIG ===
     const WORKER = "https://cluster-42.tigran-sargsyan-w.workers.dev"; // <-- оставь свой
-    const HOME_PAGE = "index.html";
+    const HOME_PAGE = "/";
     const LOGIN_PAGE = "login.html";
     const CLUSTER_PAGE = "cluster.html";
 
