fix: update button label from "Switch Account" to "Login" for clarity

--- a/profile.html
+++ b/profile.html
@@ -75,7 +75,7 @@
     <div class="topbar">
       <div class="title">42 Cluster Lens (POC)</div>
       <div style="display:flex; gap:10px;">
-        <button class="btn" id="btn-login">Switch Account</button>
+        <button class="btn" id="btn-login">Login</button>
         <button class="btn" id="btn-logout">Logout</button>
       </div>
     </div>
